--- a/actions/codecov.yml
+++ b/actions/codecov.yml
@@ -1,8 +1,7 @@
 name: Codecov
 
 on:
-  push:
-    branches: [main]
+  workflow_call:
 
 jobs:
   codecov:
@@ -14,7 +13,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
