--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -1,5 +1,9 @@
 name: Codecov
 
+inputs:
+  CODECOV_TOKEN:
+    required: true
+
 runs:
   using: "composite"
 
@@ -16,13 +20,16 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
+      shell: bash
 
     - name: Run tests with coverage
       run: pytest --cov=demo tests/
+      shell: bash
 
     - name: Upload coverage report to Codecov
       uses: codecov/codecov-action@v3
       env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        CODECOV_TOKEN: ${{ inputs.CODECOV_TOKEN }}
       with:
         file: ./coverage.xml
+      shell: bash
