--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -18,11 +18,19 @@ runs:
       shell: bash
 
     - name: Lint code
-      run: pylint demo --output-format=text > pylint_output.txt
+      run: |
+        mkdir -m ~/results/
+        pylint demo --output-format=text > ~/results/pylint_output.txt
       shell: bash
 
     - name: Generate badge
       run: |
-        pylint_note=$(grep -oP '(?<=rated at ).*(?=/10)' pylint_output.txt)
-        anybadge --value=$pylint_note --file=pylint_note.svg pylint_note
+        pylint_note=$(grep -oP '(?<=rated at ).*(?=/10)' ~/results/pylint_output.txt)
+        anybadge --value=$pylint_note --file=~/results/pylint_note.svg pylint_note
       shell: bash
+    
+    - name: Archive badge
+        uses: actions/upload-artifact@v3
+        with:
+          name: pylint_note
+          path: ~/results/pylint_note.svg
