--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -11,15 +11,11 @@ runs:
       with:
         python-version: "3.10"
 
-    - name: Install dependencies
+    - name: Install dependencies & Lint code
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-      shell: bash
-
-    - name: Lint code
-      run: |
-        sudo pylint $(git ls-files '*.py') --output=pylint_output.txt
+        pylint $(git ls-files '*.py') --output=pylint_output.txt
       shell: bash
 
     - name: Generate badge
