--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -20,10 +20,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-      shell: bash
-
-    - name: Run tests with coverage
-      run: pytest --cov=demo
+        sudo python -m pytest --cov=demo
       shell: bash
 
     - name: Upload coverage report to Codecov
