--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -15,7 +15,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        pylint $(git ls-files '*.py') --output=pylint_output.txt
+        sudo python -m pylint $(git ls-files '*.py') --output=pylint_output.txt
       shell: bash
 
     - name: Generate badge
