--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -15,12 +15,10 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-
-    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        sudo python -m pytest --cov=demo
+        pytest --cov=demo
       shell: bash
 
     - name: Upload coverage report to Codecov
