--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -6,16 +6,14 @@ runs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Python
+    - name: Setup Python & Install dependencies & Lint code
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-
-    - name: Install dependencies & Lint code
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        sudo python -m pylint $(git ls-files '*.py') --output=pylint_output.txt
+        pylint $(git ls-files '*.py') --output=pylint_output.txt
       shell: bash
 
     - name: Generate badge
