--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -15,10 +15,12 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+      
+    - name: Install dependencies and Test
       run: |
-        python -m pip install --upgrade pip
+        ${pythonLocation} -m pip install --upgrade pip
         pip install -U .[setup]
-        pytest --cov=demo
+        ${pythonLocation} -m pytest --cov=demo
       shell: bash
 
     - name: Upload coverage report to Codecov
