--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -12,15 +12,15 @@ runs:
       uses: actions/checkout@v3
 
     - name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v3
       with:
         python-version: "3.10"
       
-    - name: Install dependencies and Test
+    - name: Install dependencies and run tests with coverage
       run: |
-        ${pythonLocation} -m pip install --upgrade pip
+        python -m pip install --upgrade pip
         pip install -U .[setup]
-        ${pythonLocation} -m pytest --cov=demo
+        pytest --cov=demo
       shell: bash
 
     - name: Upload coverage report to Codecov
