--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -15,6 +15,8 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
+        which pylint
+        which python
         python -m pylint $(git ls-files '*.py') --output=pylint_output.txt
       shell: bash
 
