--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -7,7 +7,7 @@ runs:
       uses: actions/checkout@v3
 
     - name: Setup Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: "3.10"
 
@@ -15,9 +15,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        which pylint
-        which python
-        python -m pylint $(git ls-files '*.py') --output=pylint_output.txt
+        pylint --output=pylint_output.txt --fail-under 4 --verbose $(git ls-files '*.py')
       shell: bash
 
     - name: Generate badge
