--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Lint code
         uses: ./.github/actions/lint
+        with:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # GitHub token
 
   codecov:
     runs-on: ubuntu-latest
@@ -24,6 +26,7 @@ jobs:
         uses: ./.github/actions/codecov
         with:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # GitHub token
 
   build:
     runs-on: ubuntu-latest
