--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Lint code
         uses: ./.github/actions/lint
-        with:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # GitHub token
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   codecov:
     runs-on: ubuntu-latest
@@ -24,9 +24,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Run tests & codecov
         uses: ./.github/actions/codecov
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}} # GitHub token
 
   build:
     runs-on: ubuntu-latest
