--- a/.github/actions/codecov/action.yml
+++ b/.github/actions/codecov/action.yml
@@ -20,7 +20,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        pytest --cov=demo
+        pytest --cov=demo --cov-report xml
       shell: bash
 
     - name: Upload coverage report to Codecov
