--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -15,7 +15,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
-        pylint --output=pylint_output.txt --fail-under 4 --verbose $(git ls-files '*.py')
+        pylint --output=pylint.txt demo
       shell: bash
 
     - name: Generate badge
