--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 data/**/*.tif
 data/**/*.csv
 
-lightning_logs/**/*.*
+lightning_logs
+logs
 
 *.egg-info
 *.pyc
@@ -12,4 +13,6 @@ lightning_logs/**/*.*
 
 .vscode/*
 .coverage
+.pytest_cache
 *.txt
+*.lr_find*
