--- a/.github/actions/lint/action.yml
+++ b/.github/actions/lint/action.yml
@@ -15,6 +15,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -U .[setup]
+        pip install anybadge
         pylint --output=pylint.txt demo
       shell: bash
 
